SET(USE_DBUS TRUE CACHE BOOL "enable/disable dbus plugin")
SET(USE_SCROBBLER TRUE CACHE BOOL "enable/disable scrobbler plugin")
SET(USE_STATICON TRUE CACHE BOOL "enable/disable status icon plugin")

IF(USE_DBUS)
MESSAGE(STATUS "DBUS ON")
#add_subdirectory(dbuscontrol)
ELSE(USE_DBUS)
MESSAGE(STATUS "DBUS OFF")
ENDIF(USE_DBUS)

IF(USE_SCROBBLER)
MESSAGE( STATUS "SCROBBLER ON")
add_subdirectory(scrobbler)
ELSE(USE_SCROBBLER)
MESSAGE( STATUS "SCROBBLER OFF")
ENDIF(USE_SCROBBLER)

IF(USE_STATICON)
MESSAGE( STATUS "STATICON ON")
add_subdirectory(statusicon)
ELSE(USE_STATICON)
MESSAGE( STATUS "STATICON OFF")
ENDIF(USE_STATICON)