
SET(USE_MAD     TRUE CACHE BOOL "enable/disable mad plugin")
SET(USE_FLAC    TRUE CACHE BOOL "enable/disable flac plugin")
SET(USE_VORBIS  TRUE CACHE BOOL "enable/disable ogg vorbis plugin")
SET(USE_FFMPEG  TRUE CACHE BOOL "enable/disable ffmpeg plugin")
SET(USE_MPC     TRUE CACHE BOOL "enable/disable mpc plugin")
SET(USE_SNDFILE TRUE CACHE BOOL "enable/disable sndfile plugin")

IF(USE_MAD)
MESSAGE( STATUS "MAD ON")
add_subdirectory(mad)
ELSE(USE_MAD)
MESSAGE( STATUS "MAD OFF")
ENDIF(USE_MAD)

IF(USE_FLAC)
MESSAGE( STATUS "FLAC ON")
add_subdirectory(flac)
ELSE(USE_FLAC)
MESSAGE( STATUS "FLAC OFF")
ENDIF(USE_FLAC)

IF(USE_VORBIS)
MESSAGE( STATUS "VORBIS ON")
add_subdirectory(vorbis)
ELSE(USE_VORBIS)
MESSAGE( STATUS "VORBIS OFF")
ENDIF(USE_VORBIS)

IF(USE_FFMPEG)
MESSAGE( STATUS "FFMPEG ON")
add_subdirectory(ffmpeg)
ELSE(USE_FFMPEG)
MESSAGE( STATUS "FFMPEG OFF")
ENDIF(USE_FFMPEG)

IF(USE_MPC)
MESSAGE( STATUS "MPC ON")
add_subdirectory(mpc)
ELSE(USE_MPC)
MESSAGE( STATUS "MPC OFF")
ENDIF(USE_MPC)

IF(USE_SNDFILE)
MESSAGE( STATUS "SNDFILE ON")
add_subdirectory(sndfile)
ELSE(USE_SNDFILE)
MESSAGE( STATUS "SNDFILE OFF")
ENDIF(USE_SNDFILE)
