SET(USE_ALSA TRUE CACHE BOOL "enable/disable alsa plugin")
SET(USE_JACK FALSE CACHE BOOL "enable/disable jack plugin")
SET(USE_OSS FALSE CACHE BOOL "enable/disable oss plugin")

IF(USE_ALSA)
MESSAGE( STATUS "ALSA ON")
add_subdirectory(alsa)
ELSE(USE_ALSA)
MESSAGE( STATUS "ALSA OFF")
ENDIF(USE_ALSA)

IF(USE_JACK)
MESSAGE( STATUS "JACK ON")
add_subdirectory(jack)
ELSE(USE_JACK)
MESSAGE( STATUS "JACK OFF")
ENDIF(USE_JACK)

IF(USE_OSS)
MESSAGE( STATUS "OSS ON")
add_subdirectory(oss)
ELSE(USE_OSS)
MESSAGE( STATUS "OSS OFF")
ENDIF(USE_OSS)